@@ -20,6 +20,8 @@ RELEASE 0.95 - XXX
 
   - Fix an odd double-quote escape sequence in the man page.
 
+  - Fix looking up a naked drive letter as a directory (Dir('C:')).
+
 
 
 RELEASE 0.94 - Fri, 07 Nov 2003 05:29:48 -0600
